src/main/metadata/objects/EpAdapterUnitOfWork__c.object
<CustomObject>
    <description>A unit of work to be handled by the EP adapter.</description>
    <fields>
        <fullName>Complexity__c</fullName>
        <formula>NumDmlStatements__c + NumDmlRecords__c / 100 + NumSoqlQueries__c + NumSoqlRecords__c / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complexity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CpuTime__c</fullName>
        <label>CPU Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPA_Transaction_IDs__c</fullName>
        <description>Semicolon-separated list of involved EPA transactions (BTL)</description>
        <label>EPA Transaction IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message in case of failed transaction</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumDmlRecords__c</fullName>
        <description>Number of records touched by DML statements.</description>
        <inlineHelpText>Number of records touched by DML statements.</inlineHelpText>
        <label>Number of DML Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumDmlStatements__c</fullName>
        <description>Number of DML statements issued</description>
        <inlineHelpText>Number of DML statements issued</inlineHelpText>
        <label>Number of DML Statements</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumSoqlQueries__c</fullName>
        <label>Number of SOQL Queries</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumSoqlRecords__c</fullName>
        <description>Number of records retrieved by SOQL queries.</description>
        <inlineHelpText>Number of records retrieved by SOQL queries.</inlineHelpText>
        <label>Number of SOQL Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunTime__c</fullName>
        <label>Run Time (msec)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Unit of Work</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>PENDING</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PROCESSED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriggeredDateTime__c</fullName>
        <description>The timestamp when the unit of work has been initially triggered</description>
        <label>TriggeredDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ATOMIC_SINGLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATOMIC_MULTIPLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPOUND_SAME_TYPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPOUND_MULTIPLE_TYPES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitOfTransfer__c</fullName>
        <label>Unit of Transfer</label>
        <referenceTo>EpAdapterUnitOfTransfer__c</referenceTo>
        <relationshipLabel>Units of Work</relationshipLabel>
        <relationshipName>Units_of_Work</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitOfWorkId__c</fullName>
        <externalId>true</externalId>
        <label>UnitOfWorkId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Unit of Work</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <nameField>
        <label>Unit of Work Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units of Work</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>